# drugs_decisiontrees

./: README.md  drugs_classification.ipynb  pyproject.toml
.ipynb_checkpoints/: drugs_classification-checkpoint.ipynb  pyproject-checkpoint.toml
